--- a/projects.html
+++ b/projects.html
@@ -55,6 +55,44 @@
         <!-- Project 1 -->
         <div class="details-container color-container">
           <div class="article-container">
+            <img src="./assets/pharmacy-reconciliation.svg" alt="Pharmacy Data Reconciliation Workflow" class="project-img" />
+          </div>
+          <h2 class="project-title">Pharmacy Data Reconciliation Workflow</h2>
+          <p class="brief-description">
+            <strong>Project Description:</strong>
+            Automated SQL-based reconciliation pipeline for identifying discrepancies in NDC, NPI, and accumulation data with validation rules mirroring 340B ESP and contract pharmacy replenishment requirements.
+          </p>
+          <p class="brief-description">
+            <strong>Role:</strong> As a Full-Stack Developer, I designed and developed a lightweight platform for 340B pharmacy reconciliation with ETL pipelines, validation rules, discrepancy detection, web UI and exportable reports. I implemented automated validation processes and reconciliation workflows to ensure data accuracy and compliance.
+          </p>
+          <div class="btn-container">
+            <button class="btn btn-color-2 project-btn"
+              onclick="location.href='https://github.com/harshareddy-bindela/340B-Reconciliation-Platform'">
+              GitHub
+            </button>
+            <button class="btn btn-color-1 see-more-btn" onclick="toggleDetails(this)">
+              <span>See More</span>
+              <i class="icon-arrow">&#x25BC;</i>
+            </button>
+          </div>
+          <div class="project-details hidden">
+            <p><strong>Features:</strong></p>
+            <ul>
+              <li>Automated NDC validation and reconciliation</li>
+              <li>NPI provider validation</li>
+              <li>Patient accumulation data reconciliation</li>
+              <li>340B ESP eligibility validation</li>
+              <li>Contract pharmacy replenishment validation</li>
+              <li>Automated discrepancy reporting</li>
+              <li>Configurable validation rules</li>
+            </ul>
+            <p><strong>Technologies:</strong> Python, SQL, ETL Pipelines, Web UI, Reporting Tools</p>
+          </div>
+        </div>
+
+        <!-- Project 2 -->
+        <div class="details-container color-container">
+          <div class="article-container">
             <img src="./assets/wishlistyourmovies.webp" alt="Wishlist Your Movies" class="project-img" />
           </div>
           <h2 class="project-title">Wishlist Your Movies</h2>
@@ -99,6 +137,7 @@
           </div>
         </div>
 
+        <!-- Project 3 -->
         <div class="details-container color-container">
           <div class="article-container">
             <img src="./assets/project-event.webp" alt="University Event Management System" class="project-img" />
@@ -144,10 +183,10 @@
           </div>
         </div>
 
-        <!-- Project 2 -->
+        <!-- Project 4 -->
         <div class="details-container color-container">
           <div class="article-container">
-            <img src="./assets/sdms_pic.webp" alt="Project 2" class="project-img" />
+            <img src="./assets/sdms_pic.webp" alt="Student Database Management System" class="project-img" />
           </div>
           <h2 class="project-title">Student Database Management System</h2>
           <p class="brief-description">
@@ -202,7 +241,7 @@
         </div>
       </div>
     </div>
-    <!-- Project 4 -->
+    <!-- Project 5 -->
      <div class="details-container color-container">
         <div class="article-container">
         <img src="./assets/groq-chatbot.webp" alt="Real-Time AI Q&A Platform" class="project-img" />
