--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <p class="section__text__p2">Software Developer</p>
       <p class="section__text__p2">Passionate about crafting reliable, scalable, and user-centric solutions.</p>
       <div class="btn-container">
-        <button class="btn btn-color-2" onclick="window.open('./assets/Harsha_Vardhan_Reddy_Bindela_Resume.docx')">
+        <button class="btn btn-color-2" onclick="window.open('./assets/Harsha_Bindela_Resume.pdf')">
           Download CV
         </button>
         <button class="btn btn-color-1" onclick="location.href='contact.html'">
@@ -64,10 +64,10 @@
         </button>
       </div>
       <div id="socials-container">
-        <a href="https://www.linkedin.com/in/harsha2702/" target="_blank">
+        <a href="https://www.linkedin.com/in/harsha-bindela/" target="_blank">
           <img src="./assets/linkedin.png" alt="LinkedIn Profile" class="icon" />
         </a>
-        <a href="https://github.com/harshavardhanreddybindela/" target="_blank">
+        <a href="https://github.com/harshareddy-bindela/" target="_blank">
           <img src="./assets/github.png" alt="GitHub Profile" class="icon" />
         </a>
       </div>
