--- a/publications_consideration.html
+++ b/publications_consideration.html
@@ -55,14 +55,22 @@
           <h3 class="company">Published in IEEE AIPR 2023 | March 2023</h3>
           <p class="role-summary">This research explores the use of AI/ML techniques for early heart failure diagnosis, achieving a classification accuracy of 91.85%.</p>
           <a href="https://ieeexplore.ieee.org/document/10440664/" target="_blank" class="see-more-btn">
-            <span>View Publication</span>
+            <span>Focus to learn more</span>
+          </a>
+        </div>
+        <div class="experience-block">
+          <h3 class="experience-title">Leveraging Machine Learning for Early Detection of Lung Diseases</h3>
+          <h3 class="company">arXiv:2512.23757 [eess.IV] | 2025</h3>
+          <p class="role-summary">This work combines traditional image processing with deep learning (CNNs, VGG16, InceptionV3, EfficientNetB0) to detect respiratory diseases—COVID-19, lung cancer, and pneumonia—from chest X-rays. It aims to provide rapid, accurate, and non-invasive diagnostic support, especially where access to radiologists is limited.</p>
+          <a href="https://doi.org/10.48550/arXiv.2512.23757" target="_blank" class="see-more-btn">
+            <span>Focus to learn more</span>
           </a>
         </div>
         <h1 class="title">Professional Recommendations</h1>
         <div class="experience-block">
           <h2 class="experience-title">Recommendation by Jacob Wierson</h2>
           <p class="role-summary">"Harsha demonstrated exceptional dedication, problem-solving skills, and compassionate care as a Summer Camp Coordinator at Saint Louis University."</p>
-          <a href="https://www.linkedin.com/in/harsha2702/" target="_blank" class="see-more-btn">
+          <a href="https://www.linkedin.com/in/harsha-bindela/" target="_blank" class="see-more-btn">
             <span>View on LinkedIn</span>
           </a>
         </div>
