--- a/skills.html
+++ b/skills.html
@@ -73,6 +73,7 @@
                 <h4>MongoDB</h4>
                 <h4>MySQL</h4>
                 <h4>Vercel</h4>
+                <h4>Streamlit</h4>
             </div>
         </div>
 
@@ -102,6 +103,9 @@
                 <h4>NumPy</h4>
                 <h4>AI Cognitive Search</h4>
                 <h4>AI Document Intelligence</h4>
+                <h4>LangChain</h4>
+                <h4>LLMs (OpenAI, Claude, Gemini, Ollama)</h4>
+                <h4>OpenRouter</h4>
             </div>
         </div>
     </div>
