--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
       </div>
       <div class="contact-info-container">
         <img src="./assets/linkedin.png" alt="LinkedIn icon" class="icon contact-icon" />
-        <p><a href="https://www.linkedin.com/in/harsha2702/">LinkedIn</a></p>
+        <p><a href="https://www.linkedin.com/in/harsha-bindela/">LinkedIn</a></p>
       </div>
       <div class="contact-info-container">
         <img src="./assets/phone.png" alt="Phone icon" class="icon contact-icon" />
