--- a/projects.html
+++ b/projects.html
@@ -50,11 +50,10 @@
   <section id="projects">
     <p class="section__text__p1">Browse My Recent</p>
     <h1 class="title">Projects</h1>
-    <div class="experience-details-container">
-      <div class="about-containers">
+    <div class="experience-details-container projects-grid">
         <!-- Project 1 -->
-        <div class="details-container color-container">
-          <div class="article-container">
+        <div class="details-container color-container project-card">
+          <div class="article-container project-img-wrapper">
             <img src="./assets/pharmacy-reconciliation.svg" alt="Pharmacy Data Reconciliation Workflow" class="project-img" />
           </div>
           <h2 class="project-title">Pharmacy Data Reconciliation Workflow</h2>
@@ -91,8 +90,8 @@
         </div>
 
         <!-- Project 2 -->
-        <div class="details-container color-container">
-          <div class="article-container">
+        <div class="details-container color-container project-card">
+          <div class="article-container project-img-wrapper">
             <img src="./assets/wishlistyourmovies.webp" alt="Wishlist Your Movies" class="project-img" />
           </div>
           <h2 class="project-title">Wishlist Your Movies</h2>
@@ -110,7 +109,7 @@
           </p>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn"
-              onclick="location.href='https://github.com/harshavardhanreddybindela/EnglishCineWorld'">
+              onclick="location.href='https://github.com/harshareddy-bindela/EnglishCineWorld'">
               GitHub
             </button>
             <button class="btn btn-color-2 project-btn"
@@ -138,8 +137,8 @@
         </div>
 
         <!-- Project 3 -->
-        <div class="details-container color-container">
-          <div class="article-container">
+        <div class="details-container color-container project-card">
+          <div class="article-container project-img-wrapper">
             <img src="./assets/project-event.webp" alt="University Event Management System" class="project-img" />
           </div>
           <h2 class="project-title">University Event Management System</h2>
@@ -156,7 +155,7 @@
           </p>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn"
-              onclick="location.href='https://github.com/harshavardhanreddybindela/UniVibe'">
+              onclick="location.href='https://github.com/harshareddy-bindela/UniVibe'">
               GitHub
             </button>
             <button class="btn btn-color-2 project-btn" onclick="location.href='http://52.207.94.0/'">
@@ -184,8 +183,8 @@
         </div>
 
         <!-- Project 4 -->
-        <div class="details-container color-container">
-          <div class="article-container">
+        <div class="details-container color-container project-card">
+          <div class="article-container project-img-wrapper">
             <img src="./assets/sdms_pic.webp" alt="Student Database Management System" class="project-img" />
           </div>
           <h2 class="project-title">Student Database Management System</h2>
@@ -202,7 +201,7 @@
           </p>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn"
-              onclick="location.href='https://github.com/harshavardhanreddybindela/fam'">
+              onclick="location.href='https://github.com/harshareddy-bindela/fam'">
               GitHub
             </button>
             <button class="btn btn-color-2 project-btn" onclick="location.href='http://3.146.152.112:5000/'">
@@ -214,7 +213,7 @@
             </button>
           </div>
           <div class="project-details hidden">
-            <strong>Detailed Features:</strong></p>
+            <p><strong>Detailed Features:</strong></p>
             <ul>
 
               Architected the backend using Flask and Python, optimizing data processing and ensuring seamless
@@ -239,45 +238,44 @@
               RDS</p>
           </div>
         </div>
-      </div>
-    </div>
-    <!-- Project 5 -->
-     <div class="details-container color-container">
-        <div class="article-container">
-        <img src="./assets/groq-chatbot.webp" alt="Real-Time AI Q&A Platform" class="project-img" />
-      </div>
-      <h2 class="project-title">Real-Time AI Q&A Platform (GROQ API)</h2>
-      <p class="brief-description">
-        <strong>Project Description:</strong>
-        A web-based platform that answers user questions in real-time using GROQ API. Designed to demonstrate
-        intelligent query processing through a conversational interface.
-      </p>
-      <p class="brief-description">
-        <strong>Role:</strong> Developed the frontend in React and backend in Node.js/Express. Integrated GROQ API to
-        deliver dynamic responses, and structured the app for performance and maintainability.
-      </p>
-      <div class="btn-container">
-        <button class="btn btn-color-2 project-btn"
-          onclick="location.href='https://github.com/harshavardhanreddybindela/groq_chat_bot'">
-          GitHub
-        </button>
-        <button class="btn btn-color-1 see-more-btn" onclick="toggleDetails(this)">
-          <span>See More</span>
-          <i class="icon-arrow">&#x25BC;</i>
-        </button>
-      </div>
-      <div class="project-details hidden">
-        <p><strong>Responsibilities:</strong></p>
-        <ul>
-          <li>Built a responsive user interface using React for seamless interaction.</li>
-          <li>Integrated the GROQ API to fetch AI-generated answers to user queries.</li>
-          <li>Structured the backend with Node.js and Express for scalable API routing.</li>
-          <li>Handled asynchronous data flow, error management, and request optimization.</li>
-        </ul>
-        <p><strong>Technologies:</strong> React, Node.js, Express.js, GROQ API</p>
-      </div>
-    </div>
 
+        <!-- Project 5 -->
+        <div class="details-container color-container project-card">
+          <div class="article-container project-img-wrapper">
+            <img src="./assets/groq-chatbot.webp" alt="Real-Time AI Q&A Platform" class="project-img" />
+          </div>
+          <h2 class="project-title">Real-Time AI Q&A Platform (GROQ API)</h2>
+          <p class="brief-description">
+            <strong>Project Description:</strong>
+            A web-based platform that answers user questions in real-time using GROQ API. Designed to demonstrate
+            intelligent query processing through a conversational interface.
+          </p>
+          <p class="brief-description">
+            <strong>Role:</strong> Developed the frontend in React and backend in Node.js/Express. Integrated GROQ API to
+            deliver dynamic responses, and structured the app for performance and maintainability.
+          </p>
+          <div class="btn-container">
+            <button class="btn btn-color-2 project-btn"
+              onclick="location.href='https://github.com/harshavardhanreddybindela/groq_chat_bot'">
+              GitHub
+            </button>
+            <button class="btn btn-color-1 see-more-btn" onclick="toggleDetails(this)">
+              <span>See More</span>
+              <i class="icon-arrow">&#x25BC;</i>
+            </button>
+          </div>
+          <div class="project-details hidden">
+            <p><strong>Responsibilities:</strong></p>
+            <ul>
+              <li>Built a responsive user interface using React for seamless interaction.</li>
+              <li>Integrated the GROQ API to fetch AI-generated answers to user queries.</li>
+              <li>Structured the backend with Node.js and Express for scalable API routing.</li>
+              <li>Handled asynchronous data flow, error management, and request optimization.</li>
+            </ul>
+            <p><strong>Technologies:</strong> React, Node.js, Express.js, GROQ API</p>
+          </div>
+        </div>
+    </div>
   </section>
 
   <script src="./js/script.js"></script>
